--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
+Django==5.2.7
+djangorestframework==3.20.0
+gunicorn==23.0.0
 asgiref==3.10.0
+sqlparse==0.5.3
+dj-database-url==1.0.0
+requests==2.32.5
+urllib3==2.5.0
 certifi==2025.10.5
 charset-normalizer==3.4.4
-Django==5.2.7
-gunicorn==23.0.0
 idna==3.11
 packaging==25.0
-requests==2.32.5
-sqlparse==0.5.3
-urllib3==2.5.0
-dj-database-url==1.0.0
-djangorestframework==3.20.0
+pytz==2025.10
+python-dotenv==1.0.0
