--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,22 @@
-# Django y REST
+# Framework
 Django==5.2.7
 djangorestframework==3.16.1
 gunicorn==23.0.0
 whitenoise==6.5.0
 
-# Numpy y Pandas (versiones que funcionan con Python 3.13 sin compilar)
-numpy==1.26.5
-pandas==2.0.3
-
-# Matplotlib para gráficos (usar backend 'Agg')
-matplotlib==3.8.1
-
-# Scikit-learn y joblib para ML
+# Ciencia de datos / ML
+numpy==2.0.3
+pandas==2.1.3
 scikit-learn==1.3.1
 joblib==1.3.2
+matplotlib==3.8.1
 
-# Opcional: Cython (si alguna dependencia la necesita)
-Cython==0.29.40
+# Optional (si usas regresión / escalado)
+scipy==1.11.1
+
+# Evitar errores en render / compatibilidad
+cycler==0.11.0
+fonttools==4.44.0
+kiwisolver==1.4.5
+python-dateutil==2.9.4
+pytz==2025.10
