--- a/requirements.txt
+++ b/requirements.txt
@@ -5,16 +5,16 @@ gunicorn==23.0.0
 whitenoise==6.5.0
 
 # Ciencia de datos / ML
-numpy==2.0.3
-pandas==2.1.3
+numpy==1.26.5
+pandas==2.1.1
 scikit-learn==1.3.1
 joblib==1.3.2
-matplotlib==3.8.1
+matplotlib==3.7.2
 
 # Optional (si usas regresión / escalado)
-scipy==1.11.1
+scipy==1.11.0
 
-# Evitar errores en render / compatibilidad
+# Dependencias necesarias para matplotlib y pandas
 cycler==0.11.0
 fonttools==4.44.0
 kiwisolver==1.4.5
